=================================
CHANGES for Crate Mesos Framework
=================================

Unreleased
==========

  - Crate executable now uses correct Java executable provided by fetch URI

2015/08/08 0.1.0
================

  - Added shutdown hook to terminate crate if the executor goes down

  - Stop Crate process when executor is shutting down

  - Make framework name configurable

  - Use JRE from OpenJDK from
    `https://github.com/alexkasko/openjdk-unofficial-builds#openjdk-unofficial-installers-for-windows-linux-and-mac-os-x`_

  - Use custom version of OpenJDK as dependency

  - initial framework implementation
    see README.rst for usage and limitations
