@@ -69,7 +69,7 @@ public class CrateExecutor implements Executor {
 
     private class StartupInspectionTask implements Runnable {
 
-        private static final String STATEMENT = "select id from sys.nodes where name = ?";
+        private static final String STATEMENT = "SELECT id FROM sys.nodes WHERE name = ?";
         private final CrateClient client;
         private final Object[] args;
 
@@ -196,6 +196,10 @@ public class CrateExecutor implements Executor {
     }
 
     public void forceShutdownCrate(ExecutorDriver driver) {
+        driver.sendStatusUpdate(TaskStatus.newBuilder()
+                .setTaskId(currentTaskId)
+                .setState(TaskState.TASK_KILLING)
+                .build());
         LOGGER.debug("Stop Crate process.");
         task.process.destroy();
         driver.sendStatusUpdate(TaskStatus.newBuilder()
@@ -428,7 +432,7 @@ public class CrateExecutor implements Executor {
 
     public class Task {
 
-        public CrateExecutableInfo executableInfo;
+        private final CrateExecutableInfo executableInfo;
         public Process process = null;
 
         Task(CrateExecutableInfo info) {
@@ -436,6 +440,7 @@ public class CrateExecutor implements Executor {
 
         }
 
+        @NotNull
         private String env() {
             List<Environment.Variable> env = executableInfo.environment();
             ArrayList<String> vars = new ArrayList<>(env.size());
@@ -447,13 +452,14 @@ public class CrateExecutor implements Executor {
             return Joiner.on(" ").join(vars);
         }
 
+        @NotNull
         private String cmd() {
             return Joiner.on(" ").join(executableInfo.arguments());
         }
 
         public Process run() throws IOException {
             final String runCmd = String.format("%s %s", env(), cmd());
-            LOGGER.debug("Launch task: {}", runCmd);
+            LOGGER.info("Launch task: {}", runCmd);
             process = Runtime.getRuntime().exec(
                     new String[]{"sh", "-c", runCmd},
                     new String[]{},
